force-app/main/default/objects/pse__Est_Vs_Actuals__c/pse__Est_Vs_Actuals__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__EstimateVsActualsHelp</customHelpPage>
    <description>Compares the estimated and actual hours worked by a resource on an assignment, derived from scheduled hours and entered timecard hours respectively. FinancialForce PSA generates Est Vs Actuals when you create or update assignments and schedules, and when timecard hours are entered for an assignment.</description>
    <label>Est Vs Actuals</label>
    <nameField>
        <label>Est Vs Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Est Vs Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>