force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Adjusted_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Estimated_Hours__c</fullName>
    <formula>IF(
  pse__Resource__r.pse__Group__r.Id = &apos;a1q50000004zxly&apos;,
  pse__Estimated_Hours__c * 1.09,
  IF(
    pse__Resource__r.pse__Region__r.Id = &apos;a2F50000000oYg4&apos;,
    pse__Estimated_Hours__c * 1.16,
    IF(
      pse__Resource__r.pse__Region__r.Id = &apos;a2F50000000oYgE&apos;,
      pse__Estimated_Hours__c * 1.15,
      pse__Estimated_Hours__c
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>