force-app/main/default/objects/pse__Est_Vs_Actuals__c/validationRules/pse__Assignment_required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(pse__Assignment__c) = 0</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Assignment is required</errorMessage>
</ValidationRule>